# StatSim

./: .gitignore  CMakeLists.txt
include/StatSim/: Data.hpp  Distribution.hpp  Math.hpp  Simulator.hpp
src/: Data.cpp  Distribution.cpp  Main.cpp  Math.cpp  Simulator.cpp
